<resources>
    <string name="app_name">Co voiturage </string>


    <string name="bouton_publier_annonce">Publier une annonce</string>
    <string name="action_settings">title_action_string</string>



    <!-- Inscription !-->
    <string name="email">E-mail</string>
    <string name="mdp">Mot de passe : </string>
    <string name="confirme_mdp">Confirmer : </string>
    <string name="nom">Nom : </string>
    <string name="prenom">Prénom : </string>
    <string name="date_naissance">Date de naissance : </string>
    <string name="sexe">Sexe : </string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="tel">Téléphone : </string>
    <string name="ville">Ville : </string>
    <string name="button_suivant">Suivant</string>
    <string name="question_textview">Choisir votre question de sécurité :</string>
    <string name="reponse_textview">Réponse : </string>
    <!-- hint !-->
    <string name="hint_email">xxxxxx@xxxx.xxx</string>
    <string name="hint_mdp">****</string>
    <string name="hint_confirme_mdp">****</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prénom</string>
    <string name="hint_tel">xx xxx xxx</string>
    <string name="hint_ville">Ville</string>
    <string name="hint_reponse">Réponse</string>
    <!-- error provider !-->
    <string name="erreur_champvide">Attention! champ vide</string>
    <string name="erreuremail">xxxxxx@xxxx.xxx </string>
    <string name="erreurmdp_inf">Minumum 3 caractères</string>
    <string name="erreurmdp_identique">Deux champs non identiques</string>
    <string name="erreur_inf">Minumum 4 caractères</string>
    <string name="erreursex">Selectionner votre sexe !</string>
    <string name="erreur_tel">8 chiffres pour le numéro de téléphone !</string>


    <string name="button_connexion">Connexion</string>
    <string name="button_insc">Inscription</string>
    <string name="button_next">Suivant</string>




    <string-array name="liste_question">
        <item>Questions</item>
        <item>Votre premier numéro de téléphone?</item>
        <item>Le nom de votre premier animal?</item>
        <item>Votre boissons favorit</item>
        <item>Votre meilleur amis?</item>
    </string-array>

    <!-- Rechercher !-->
    <string name="VilleDep">Ville de depart : </string>
    <string name="VilleArr">Ville d\'Arriver : </string>
    <string name="DateDep">Date de depart : </string>
    <string name="HeureArr">Heure d\'Arriver : </string>
    <string name="NbPlace">Nombre De Place : </string>
    <string name="Description">Description : </string>
    <string name="Bagage">Baggage : </string>
    <string name="Fumer">Fumer : </string>
    <string name="Animale">Animal : </string>
    <string name="Etat">Etat : </string>

    <!-- hint !-->
    <string name="hint_VilleDep">Ville de depart </string>
    <string name="hint_VilleArr">Ville d\'Arriver </string>

    <!-- Les Buttons!-->
    <string name="buttonRechercher">Rechercher</string>
    <string name="rech">Rechercher un Parcours</string>

</resources>

